Fix letter spacing fo the delegation button label

--- a/src/main/resources/static/css/cas.css
+++ b/src/main/resources/static/css/cas.css
@@ -887,6 +887,7 @@ body {
     color: black;
     white-space: nowrap;
     padding-left: 28px;
+    letter-spacing: normal;
 }
 
 .form-button .delegation-button-logo {
